[package]
name = "solana-trading-util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.20"
bincode = "1.3.3"
chrono = "0.4.38"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
