[workspace]
resolver = "2"
members = ["util"]

[workspace.package]
repository = "https://github.com/quantoor/solana-trading"
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
base64 = "0.20"
bincode = "1.3.3"
chrono = "0.4.38"
futures = "0.3.30"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
solana-transaction-status = "2.0.2"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
