[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
