[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64 = "0.20"
bincode = "1.3.3"
chrono = "0.4.38"
solana-client.workspace = true
solana-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
