[package]
name = "solana-trading-core"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
