[package]
name = "solana-trading-util"
version = "0.3.0"
description = "Solana trading utilities"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
solana-trading-core = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { version = "1.41.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
